# Laptop-Battery-Management-Tool

./: README.md  system-architecture.md
src/: __main__.py  app.py  utils.py
src/core-service/: __init__.py  __main__.py  core.py  gui.py  requirements.txt  utils.py
src/desktop-app/: package.json  webpack.config.js
src/desktop-app/src/: index.html  main.js  preload.js  renderer.js
src/native-modules/: CMakeLists.txt  cli_main.cpp
src/native-modules/linux/: battery_control.cpp  battery_control.h
src/native-modules/macOS/: battery_control.h
src/native-modules/macos/: battery_control.cpp
src/native-modules/windows/: battery_control.cpp  battery_control.h
src/system-service/: Cargo.toml
src/system-service/src/: battery.rs  main.rs
